# mafianft

./: .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT_STATUS.md  README.md  READY_FOR_DEPLOYMENT.md  complete-project-setup.sh  create-download-package.sh  package-lock.json  package.json  tsconfig.json  upload-to-github.md
.github/workflows/: ci-cd.yml  ci.yml
app/: README.md
app/Assets/Scripts/Blockchain/: SolanaWalletManager.cs
app/Assets/Scripts/Game/: GameManager.cs
app/Assets/Scripts/Utils/: Constants.cs
backend/: package.json
backend/src/: app.module.ts  main.ts
backend/src/auth/: auth.controller.ts  auth.module.ts
docs/: deployment-guide.md  fast-launch-plan.md  game-design.md  nft-schema.md  project-summary.md  roadmap.md  tokenomics.md
programs/character-nft/: Cargo.toml
programs/character-nft/src/: lib.rs
programs/fam-token/: Cargo.toml
programs/fam-token/src/: lib.rs
programs/game-treasury/: Cargo.toml
programs/game-treasury/src/: lib.rs
programs/item-vault/: Cargo.toml
programs/item-vault/src/: lib.rs
programs/mob-token/: Cargo.toml
programs/mob-token/src/: lib.rs
programs/turf-control/: Cargo.toml
programs/turf-control/src/: lib.rs
scripts/: deploy-to-devnet.sh  fast-deploy.sh  generate-ai-art.js  initialize-programs.js  setup-github.sh  setup-unity-client.js  setup-unity-simple.js  validate-deployment-ready.js  validate-programs.js
tests/: character-nft.ts
