[workspace]
members = [
    "programs/character-nft",
    "programs/item-vault",
    "programs/turf-control",
    "programs/mob-token",
    "programs/fam-token",
    "programs/game-treasury"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.16.0"
spl-token = "4.0.0"
spl-associated-token-account = "2.2.0"
mpl-token-metadata = "3.2.0"
arrayref = "0.3.7"
borsh = "0.10.3"
solana-security-txt = "1.1.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
