[package]
name = "game-treasury"
version = "0.1.0"
description = "Game treasury for cross-program fee collection and distribution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "game_treasury"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
arrayref = { workspace = true }
borsh = { workspace = true }
solana-security-txt = { workspace = true }
